# letterlieup

./: .gitignore
client/: package-lock.json  package.json
client/api-client/.openapi-generator/: FILES
client/api-client/apis/: QuestionsApi.ts  index.ts
client/api-client/models/: PatchedQuestion.ts  Question.ts  index.ts
client/src/: index.tsx
server/: db.sqlite3  pyproject.toml  schema.yaml
server/core/: models.py  serializers.py  urls.py  views.py
server/core/migrations/: 0001_initial.py  0003_rename_date_added_question_created_at.py
server/server/: db.sqlite3  settings.py  urls.py
server/server/core/: urls.py  views.py
server/server/core/migrations/: 0002_rename_choice_answer.py
server/server/server/: urls.py
