[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ibraheem Sajid <ibraheem.sajid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
